--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,10 +79,43 @@ body {
             transform: rotate(-90deg);
 
             text-decoration: none;
-            span {
+
+            &-span {
+                color: $black;
+            }
+            &-span1 {
                 color: $black;
             }
         }
+    }
+
+    .container {
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
+
+    .change .bar2 {
+        opacity: 0;
+    }
+
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
     }
 
     &-img {
@@ -129,9 +162,12 @@ body {
     }
     &-imgs {
         margin-top: 85px;
-
+        display: flex;
+        justify-content: center;
+        width: 100%;
         &__img {
-            margin: 0 45px;
+            width: 20%;
+            margin: 0 15px;
         }
     }
 }
@@ -158,6 +194,11 @@ body {
             -moz-border-radius: 20px;
             -ms-border-radius: 20px;
             -o-border-radius: 20px;
+            transition: 0.3s;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            -ms-transition: 0.3s;
+            -o-transition: 0.3s;
             &__img {
                 width: 100%;
                 height: 100%;
@@ -169,12 +210,7 @@ body {
             }
         }
         &-link:hover {
-            transition: 0.3s;
             box-shadow: 0 30px 40px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.22);
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            -ms-transition: 0.3s;
-            -o-transition: 0.3s;
         }
 
         &-link1 {
@@ -186,6 +222,11 @@ body {
             -moz-border-radius: 20px;
             -ms-border-radius: 20px;
             -o-border-radius: 20px;
+            transition: 0.3s;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            -ms-transition: 0.3s;
+            -o-transition: 0.3s;
             &__img {
                 width: 100%;
                 height: 100%;
@@ -197,12 +238,7 @@ body {
             }
         }
         &-link1:hover {
-            transition: 0.3s;
             box-shadow: 0 30px 40px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.22);
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            -ms-transition: 0.3s;
-            -o-transition: 0.3s;
         }
 
         &-link2 {
@@ -214,6 +250,11 @@ body {
             -moz-border-radius: 20px;
             -ms-border-radius: 20px;
             -o-border-radius: 20px;
+            transition: 0.3s;
+            -webkit-transition: 0.3s;
+            -moz-transition: 0.3s;
+            -ms-transition: 0.3s;
+            -o-transition: 0.3s;
             &__img {
                 width: 100%;
                 height: 100%;
@@ -225,12 +266,7 @@ body {
             }
         }
         &-link2:hover {
-            transition: 0.3s;
             box-shadow: 0 30px 40px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.22);
-            -webkit-transition: 0.3s;
-            -moz-transition: 0.3s;
-            -ms-transition: 0.3s;
-            -o-transition: 0.3s;
         }
 
         &__a {
@@ -264,18 +300,18 @@ body {
         text-decoration: none;
         color: #fff;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+        transition: 0.4s;
+        -webkit-transition: 0.4s;
+        -moz-transition: 0.4s;
+        -ms-transition: 0.4s;
+        -o-transition: 0.4s;
     }
     &__a:hover {
-        transition: 0.4s;
         transform: scale(1.1);
         -webkit-transform: scale(1.1);
         -moz-transform: scale(1.1);
         -ms-transform: scale(1.1);
         -o-transform: scale(1.1);
-        -webkit-transition: 0.4s;
-        -moz-transition: 0.4s;
-        -ms-transition: 0.4s;
-        -o-transition: 0.4s;
         box-shadow: 0 30px 40px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.22);
     }
     &__img {
@@ -334,7 +370,7 @@ body {
             margin: 0;
             flex-direction: column;
             align-items: flex-start;
-            &__name{
+            &__name {
             }
             &__about {
                 margin: 0;
@@ -365,30 +401,22 @@ body {
 
     .skills {
         padding: 0 10px;
-        &__h1{
+        &__h1 {
             margin-top: 50px;
         }
-        &__p{
+        &__p {
             margin-top: 20px;
-        }
-        &-imgs{
-            margin-top: 40px;
-            display: flex;
-            flex-direction: column;
-            &__img{
-                margin: 10px 0;
-            }
         }
     }
 
     .portfolio {
         margin-top: 50px;
         padding: 10px;
-        &-block{
-            &-link1{
+        &-block {
+            &-link1 {
                 margin-top: 50px;
             }
-            &-link2{
+            &-link2 {
                 margin-top: 50px;
             }
         }
@@ -396,7 +424,7 @@ body {
 
     .contacts {
         padding: 10px 0;
-        &__img{
+        &__img {
             margin-top: 50px;
             width: 50%;
         }
